--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
+        android:onClick="capturePhoto"
         app:fabSize="normal"
         app:srcCompat="@android:drawable/ic_menu_camera"/>
 
