Fixed fragment loading issue, etc.  - Fixed SQL syntax  - Fixed incorrect class binding in activity_main.xml  - Various fixes  - Current issue: MainActivity:100 placeLikelihoods.get(0) has error

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
 
                     <fragment
                         android:id="@+id/listFragment"
-                        android:name="android.support.v4.app.ListFragment"
+                        android:name="net.miscfolder.geophoto.ItemFragment"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
 
