--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -15,7 +15,7 @@
     <LinearLayout
         android:id="@+id/mainText"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="72dp"
         android:layout_weight="1"
         android:clickable="true"
         android:orientation="vertical">
