Fixed file deletion bug  - Updated GeoPhoto#delete(DatabaseHelper) to fix prepared statement formatting

--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -21,14 +21,14 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/fileName"
+            android:id="@+id/coordinates"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="File Name"
             android:textSize="18sp"/>
 
         <TextView
-            android:id="@+id/fileInfo"
+            android:id="@+id/infoText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Coordinates - DateTime"/>
