--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
-              android:layout_height="wrap_content"
+              android:layout_height="72dp"
               android:orientation="horizontal">
 
     <ImageButton
         android:id="@+id/imageContainer"
-        android:layout_width="wrap_content"
+        android:layout_width="96dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         app:srcCompat="@android:drawable/ic_menu_camera"/>
@@ -15,23 +15,25 @@
     <LinearLayout
         android:id="@+id/mainText"
         android:layout_width="wrap_content"
-        android:layout_height="72dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
+        android:layout_weight="2"
         android:clickable="true"
+        android:layout_margin="10dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/coordinates"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="File Name"
-            android:textSize="18sp"/>
+            android:text="Coordinates"
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/infoText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Coordinates - DateTime"/>
+            android:text="DateTime"
+            android:textSize="16sp"/>
     </LinearLayout>
 
     <ImageButton
