--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,6 @@
                     android:id="@+id/photo_list"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#ffc916"
                     android:orientation="vertical">
 
                     <fragment
@@ -57,14 +56,15 @@
                     android:id="@+id/map_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#da8200"
                     android:orientation="vertical">
 
-                    <fragment
-                        android:id="@+id/mapFragment"
-                        android:name="com.google.android.gms.maps.SupportMapFragment"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"/>
+                    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                              xmlns:tools="http://schemas.android.com/tools"
+                              android:id="@+id/map"
+                              android:name="com.google.android.gms.maps.MapFragment"
+                              android:layout_width="match_parent"
+                              android:layout_height="match_parent"
+                              tools:context="net.miscfolder.geophoto.MainActivity"/>
 
                 </LinearLayout>
 
